# OpeNN

./: CMakeLists.txt  OpeNN.sln  README.md
Core/: Core.vcxproj  Core.vcxproj.filters  algebra.cpp  algebra.hpp  random.hpp  types.hpp  utility.hpp
OpeNN/: OpeNN.cpp  OpeNN.hpp  OpeNN.vcxproj  OpeNN.vcxproj.filters  main.cpp  nn_printer.cpp  utility.hpp
OpeNN/package/: opeNN.cpp  opeNN.hpp  training.hpp  types.hpp  utility.cpp  utility.hpp
OpeNN/package/io/: nn_printer.cpp  nn_printer.hpp  nn_serializer.cpp  nn_serializer.hpp
TestCore/: TestCore.vcxproj  TestCore.vcxproj.filters
TestOpenn/: ParamDB.cpp  ParamDB.hpp  TestOpenn.vcxproj  TestOpenn.vcxproj.filters  helpers.hpp  test_core_utility.cpp  test_nn.cpp  test_nn_param_database.cpp  test_nn_param_database.hpp  test_nn_param_database_data.cpp  test_utilities.cpp
TestOpenn/TestNN/: helpers.cpp  helpers.hpp  test_nn.cpp  test_nn.hpp  test_nn_instantiations.hpp  test_nn_param_database.cpp  test_nn_param_database.hpp  test_nn_param_database_data.cpp  test_nn_tests.cpp
TestOpenn/TestUtilities/: test_utilities.cpp
resources/: tiny_nn_01.json  tiny_nn_02.json  tiny_nn_03.json  tiny_nn_04.json  tiny_nn_05.json  to_file_test.json
src/: CMakeLists.txt  main.cpp
src/core/: algebra.cpp  algebra.hpp  random.hpp  types.hpp  utility.hpp
src/misc/: resource_unpacker.cpp  resource_unpacker.hpp
src/openn/: openn.cpp  openn.hpp  training.cpp  training.hpp  types.cpp  types.hpp
src/openn/io/: nn_printer.cpp  nn_printer.hpp  nn_serializer.cpp  nn_serializer.hpp
src/projects/mnist/: TrainingEnvironment.cpp  TrainingEnvironment.hpp  types.hpp
src/projects/simplest/: XorEnvironment.cpp  XorEnvironment.hpp
tests/: CMakeLists.txt
tests/common/: ParamDB.cpp  ParamDB.hpp  ParamDB_impl.hpp  helpers.hpp
tests/core_tests/: algebra_test.cpp  random_test.cpp  types_test.cpp  utility_test.cpp
tests/misc_tests/: resource_unpacker_test.cpp  ru_test_1.idx1-ubyte  ru_test_2.idx2-ubyte  ru_test_3.idx3-ubyte
tests/openn_tests/: helpers.cpp  helpers.hpp  openn_test.cpp  openn_test.hpp  openn_test_data.cpp  openn_test_func.cpp  openn_test_instantiations.hpp  training_test.cpp  types_test.cpp
